--- a/about/css/about.css
+++ b/about/css/about.css
@@ -9,5 +9,14 @@
     background-color: #3f4964;
     border:5px solid white;
 }
+.ourStoriesImg,.ourMissionImg,.ourVisionImg{
+    overflow:hidden;
+}
+.ourStoriesImg img,.ourMissionImg img,.ourVisionImg img{
+    transition:500ms transform ease-in-out;
+}
+.ourStoriesImg img:hover,.ourMissionImg img:hover,.ourVisionImg img:hover{
+    transform:scale(1.05);
+}
 
 
