--- a/utilities/utilis.css
+++ b/utilities/utilis.css
@@ -7,6 +7,7 @@
 @import url('https://fonts.googleapis.com/css2?family=KoHo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pattaya&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500&display=swap');
 
 :root {
   /* --main-bg-color: #bd6418; */
@@ -18,6 +19,7 @@
   --font-6:'KoHo', sans-serif;
   --font-7: 'Pattaya', sans-serif;
   --font-8: 'Anton', sans-serif;
+  --font-9: 'Red Hat Display', sans-serif;
 }
 
 .font1 {
@@ -44,10 +46,6 @@
 .font8 {
   font-family: var(--font-8);
 }
-.max-width-1 {
-  max-width: 80vw;
-}
-
-.max-width-2 {
-  max-width: 60vw;
+.font9 {
+  font-family: var(--font-9);
 }
