Added courses page

--- a/about/css/aboutResponsive.css
+++ b/about/css/aboutResponsive.css
@@ -1,7 +1,11 @@
 /* For Medium*/
 @media screen and (max-width: 991px) {
-    /* Welcome  */
-    #welcome-typingContainer{
-        min-height:72px;
-    }
+  /* Welcome  */
+  #welcome-typingContainer {
+    min-height: 72px;
+  }
+  /* Why Choose Us  */
+  #whyChooseUsTypingContainer {
+    min-height: 50px;
+  }
 }
