--- a/utilities/utilis.css
+++ b/utilities/utilis.css
@@ -8,6 +8,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Pattaya&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 
 :root {
   /* --main-bg-color: #bd6418; */
@@ -20,6 +21,7 @@
   --font-7: 'Pattaya', sans-serif;
   --font-8: 'Anton', sans-serif;
   --font-9: 'Red Hat Display', sans-serif;
+  --font-10: 'Roboto Slab', serif;
 }
 
 .font1 {
@@ -48,4 +50,8 @@
 }
 .font9 {
   font-family: var(--font-9);
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
